Fix wrong text color in places and in folders panel.

FIXED-IN: 4.9.1
REVIEW: 105832
BUG: 303133