src/kitemviews/kstandarditemlistwidget.h
@@ -120,6 +120,8 @@ protected:
      */
     virtual QFont customizedFont(const QFont& baseFont) const;
 
+    virtual QPalette::ColorRole normalTextColorPalette() const;
+
     void setTextColor(const QColor& color);
     QColor textColor() const;
 
